# fairqueue

./: .env.example  .env.loadtest.example  .gitignore  .golangci.yaml  ARCHITECTURE.md  Dockerfile  Dockerfile.loadtest  Makefile  README.md  TRADEOFFS.md  docker-compose.loadtest.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: deploy.yml  loadtest.yml
api/: openapi.yaml
api/cfg/: oapi-codegen.yaml
backend/: Dockerfile  config.py  database.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2be36c9211ed_init_tables.py  83c9f513abeb_add_partial_unique_constraint_on_active_.py  9a954a89f28b_init_tables.py  9f05182fc332_added_initialization_status_to_payments_.py  b52a63fbdaf3_init_tables.py
backend/api/routers/: claims.py  events.py  queue.py  webhoooks.py
backend/api/schemas/: __init__.py  claims.py  events.py  queue.py
backend/core/: __init__.py  inventory.py  queue.py  webhook_queue.py
backend/models/: __init__.py  claim.py  event.py  inventory_item.py  payment.py  queue_entry.py  user.py
backend/repositories/: __init__.py  claims.py  events.py  payments.py  queue.py
backend/services/: __init__.py  claim_service.py  event_service.py  payment_service.py
backend/tests/: conftest.py  test_api.py  test_claim_service.py  test_inventory_store.py  test_payment_service.py  test_queue_service.py
backend/workers/: claim_expiry.py  event_activator.py  payment_reconciliation.py  webhook_worker.py
cmd/api/: main.go
cmd/loadtest/: main.go
docs/: docs.go  swagger.yaml
docs/api/: docs.go  swagger.json
frontend/: README.md  index.html
internal/api/: generated.go  handlers.go  hub.go  middleware.go  server.go
internal/auth/: auth_additions.go  token.go  token_test.go
internal/config/: config.go  database.go  logger.go  redis.go
internal/domain/: claim.go  claim_test.go  customer.go  errors.go  event.go  event_test.go  (+5 more)
loadtest/: 01_baseline.js  02_sustained.js  03_spike.js  04_breakpoint.js  05_contention.js  06_polling.js  generate_tokens.js
(+89 files in other folders)
