[project]
name = "backend"
version = "0.1.0"
description = "backend logic for fairqueue"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "psycopg2-binary>=2.9.11",
    "redis>=7.3.0",
    "ruff>=0.15.6",
    "sqlalchemy>=2.0.48",
]

[tool.ruff]
line-length = 105
exclude = [
    "tests",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]
